@@ -157,7 +157,7 @@ public class Utilizador implements Serializable {
         //TODO ???????????????
         if (!this.listaEncomendas.isEmpty())
         {
-            if (!this.listaEncomendas.stream().filter(enc -> enc.getTransportadora().equals(artigo.getTransportadora()) && enc.getEstado() == Atributos.PENDENTE).toList().isEmpty())
+            if (!this.listaEncomendas.stream().filter(enc -> enc.getTransportadora().equals(artigo.getTransportadora()) && enc.getEstado() == Atributos.PENDENTE).collect(Collectors.toList()).isEmpty())
             {
                 //Encomenda encomenda = this.listaEncomendas.stream().filter(enc -> enc.getTransportadora().equals(artigo.getTransportadora()) && enc.getEstado() == Atributos.PENDENTE).toList().get(0);
                 //encomenda.adicionaArtigo(artigo);
@@ -182,7 +182,7 @@ public class Utilizador implements Serializable {
 
     public void removeArtigoEncomenda(Artigo artigo) throws EncomendaException {
         //TODO ???????????????????
-        Encomenda encomenda = this.listaEncomendas.stream().filter(enc -> enc.getTransportadora().equals(artigo.getTransportadora()) && enc.getEstado() == Atributos.PENDENTE).toList().get(0);
+        Encomenda encomenda = this.listaEncomendas.stream().filter(enc -> enc.getTransportadora().equals(artigo.getTransportadora()) && enc.getEstado() == Atributos.PENDENTE).collect(Collectors.toList()).get(0);
         if (encomenda != null)
         {
             encomenda.removeArtigo(artigo);
